--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="hero" class="hero">
       <div class="hero-left">
         <div class="profile-pic-container">
-          <img src="images/profile_pic.jpg" alt="My Photo" class="profile-pic">
+          <img src="profile_pic.jpg" alt="My Photo" class="profile-pic">
         </div>
       </div>
       <div class="hero-right">
